# calibration

./: .gitignore  README.md  calibration.py  claude.ms  register-task.ps1  requirements.txt  template.docx  test_main.py
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_auth_schema.py  0002_add_calibration_tables.py  0003_add_logger_result_indexes.py  0004_add_user_pending.py  0005_fix_test_date_jp.py  0006_fix_doc_date_jp.py  0007_fix_batch_names.py
apps/api/ite_api/: audit.py  cli.py  config.py  main.py
apps/api/ite_api/auth/: dependencies.py  lockout.py  passwords.py  tokens.py
apps/api/ite_api/calibration/: cal_loader.py  docx_filler.py  engine.py  matcher.py  ref_loader.py
apps/api/ite_api/db/: session.py
apps/api/ite_api/db/models/: __init__.py  audit_log.py  calibration.py  password_reset.py  session.py  user.py
apps/api/ite_api/middleware/: origin.py  refresh.py
apps/api/ite_api/routes/: auth.py  loggers.py  overview.py  runs.py  users.py
apps/api/ite_api/storage/: __init__.py
apps/api/tests/: conftest.py  test_audit.py  test_cli.py  test_db.py  test_health.py  test_models.py
apps/api/tests/auth/: test_dependencies.py  test_lockout.py  test_passwords.py  test_tokens.py
apps/api/tests/calibration/: conftest.py  test_cal_loader.py  test_cli_run_calibration.py  test_docx_filler.py  test_engine.py  test_matcher.py  test_ref_loader.py
apps/api/tests/fixtures/calibration/: golden_ref1.csv  golden_ref2.csv  golden_workbook.xlsx  reference.csv  workbook.xlsx
apps/api/tests/fixtures/calibration/golden/: Calibration_Certificate_0000001720_190124110002450.docx  Calibration_Certificate_0000001721_190124110002451.docx  Calibration_Certificate_0000001722_190124110002452.docx  Calibration_Certificate_0000001723_190124110002453.docx  Calibration_Certificate_0000001724_190124110002454.docx  Calibration_Certificate_0000001725_190124110002455.docx  Calibration_Certificate_0000001726_190124110002456.docx  Calibration_Certificate_0000001727_190124110002457.docx  Calibration_Certificate_0000001728_190124110002458.docx  Calibration_Certificate_0000001729_190124110002459.docx  Calibration_Certificate_0000001730_190124110002460.docx  Calibration_Certificate_0000001731_190124110002461.docx  Calibration_Certificate_0000001732_190124110002462.docx  Calibration_Certificate_0000001734_190124110002464.docx  Calibration_Certificate_0000001735_190124110002465.docx  Calibration_Certificate_0000001736_190124110002466.docx  Calibration_Certificate_0000001737_190124110002467.docx  Calibration_Certificate_0000001738_190124110002468.docx  Calibration_Certificate_0000001739_190124110002469.docx  Calibration_Certificate_0000001740_190124110002470.docx  Calibration_Certificate_0000001741_190124110002471.docx  Calibration_Certificate_0000001742_190124110002472.docx  Calibration_Certificate_0000001744_190124110002474.docx  (+180 more)
apps/api/tests/middleware/: test_origin.py
apps/api/tests/routes/: test_auth.py  test_overview.py  test_runs.py
deploy-package/: .env.example  nginx.conf  (+4 more)
(+117 files in other folders)
