[project]
name = "ite_api"
version = "0.1.0"
description = "ITE Calibration API"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "email-validator==2.2.0",
  "pydantic-settings==2.7.0",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "psycopg[binary]==3.2.3",
  "argon2-cffi==23.1.0",
  "pyjwt==2.10.1",
  "typer==0.15.1",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "python-docx==1.1.2",
]

[project.scripts]
ite-api = "ite_api.cli:app"

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "httpx==0.28.1",
  "ruff==0.8.4",
  "testcontainers[postgres]==4.9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ite_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Depends(...) in argument defaults is FastAPI's idiomatic pattern.
# B017: pytest.raises(Exception) is intentional in token-decoding tests
#       where any of several JWT exceptions are acceptable.
ignore = ["B008", "B017"]
